--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.1",
@@ -25,6 +26,7 @@
     "@angular/router": "~8.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.3.3",
     "hammerjs": "^2.0.8",
     "moment": "^2.23.0",
     "rxjs": "~6.5.2",
