--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^8.0.3",
     "@angular/platform-browser-dynamic": "^8.0.3",
     "@angular/router": "^8.0.3",
+    "@ngrx/store": "^8.6.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.7",
     "firebase": "^6.6.2",
